- Fix: Fonts generated with gdx-freetype no longer bleed when drawn with a shadow
- Fixed Timer tasks being run after cancellation.
- Optimization of SpriteBatch in GL30 default modes, as indices do not need to be updated
- Desktop: Added support for 8/32/64-bit PCM and MP3 WAVs
- Desktop: Improved support for surround sound audio files (#6792)
- Cache packed color on sprite to improve performance
- Improve JsonReader, add JsonSkimmer, JsonString
- Add proper glTexImage2D support on GWT
- Expose the color variables of Box2DDebugRenderer
- Add Color#set(Color rgb, float a)
- Prevent loss of precision in OrthographicCamera#update
- Fix offsets in ConvexHull while being unsorted
- Small particle emitter improvements
- Fix : RenderBuffer leak in GLFrameBuffer
- LWJGL 3: Remove unnecessary window.makeCurrent() calls to improve performance (#7362)
- Fix: DragListener only listens to the correct touch up events
- Fix incorrect glyph page index in FreeTypeFontGenerator
- Added TextureAtlas.TextureAtlasData.Page#name.
- iOS: Improve preferred FPS setting logic and documentation on iOS backend
- Fixed TextField breaking if the font has markup enabled.
- Only allow scrolling of a scroll pane if it has scroll focus
- iOS: Adding RoboVM AudioDevice implementation
- Add new Color#CLEAR_WHITE
- Fixed ScrollPane#scrollTo setting scrollX when there's a width
- Screens now extend the Disposable interface
- Added antialiasing flag to the ScreenUtils.
- Fix Intersector.intersectPolygons() corner case
- LWJGL 3: Fix the delta time not changing when resizing the window
- GWT: Allow switching the audio device; this has to be enabled via GwtApplicationConfiguration#fetchAvailableOutputDevices
- Add API to get user inout with native text fields (#7004)
- Fix issue with the 'request still pending' check on NetJavaImpl
- Added possibility to reset a particle effect without starting it
- Android & iOS: Use empty Audio implementations on Android and iOS when audio is disabled